# haskell-overridez

./: .gitignore  .travis.yml  Changelog.md  README.md  build.nix  cabal.project  default.nix  haskell-overridez  haskell-overridez.cabal  lib.nix  release.nix  shell.nix  test.sh
.circleci/: config.yml
exe/: Main.hs
fixtures/: install_nix.sh  install_test_deps.sh  new_fixture_dir.sh
fixtures/gobanme-no-purojekuto/: DESC  default.nix  gobanme-no-purojekuto.cabal  setup_test.sh
fixtures/gobanme-no-yagai-purojekuto/: DESC  default.nix  gobanme-no-yagai-purojekuto.cabal  setup_test.sh
fixtures/hachibanme-no-purojekuto/: DESC  default.nix  hachibanme-no-purojekuto.cabal  setup_test.sh
fixtures/ichibanme-no-yagai-purojekuto/: DESC  default.nix  ichibanme-no-yagai-purojekuto.cabal  setup_test.sh
fixtures/jyuubanme-no-purojekuto/: DESC  default.nix  jyuubanme-no-purojekuto.cabal  setup_test.sh  test.sh
fixtures/jyuuichibanme-no-purojekuto/: DESC  default.nix  jyuuichibanme-no-purojekuto.cabal  setup_test.sh  test.sh  with-options.nix
fixtures/kyuubanme-no-purojekuto/: DESC  Main.hs  default.nix  kyuubanme-no-purojekuto.cabal  setup_test.sh
fixtures/nanabanme-no-purojekuto/: DESC  default.nix  nanabanme-no-purojekuto.cabal  setup_test.sh  test.sh
fixtures/nibanme-no-yagai-purojekuto/: DESC  nibanme-no-yagi-purojekuto.cabal  setup_test.sh  test.sh
fixtures/rokubanme-no-purojekuto/: DESC  SKIP  default.nix  rokubanme-no-purojekuto.cabal  setup_test.sh
fixtures/sanbanme-no-yagai-purojekuto/: DESC  default.nix  sanbanme-no-yagai-purojekuto.cabal  setup_test.sh
fixtures/yonbanme-no-purojekuto/: DESC  default.nix  setup_test.sh  yonbanme-no-purojekuto.cabal
fixtures/yonbanme-no-yagai-purojekuto/: DESC  default.nix  setup_test.sh  yonbanme-no-yagai-purojekuto.cabal
haskell-overridez-tests/: LICENSE  haskell-overridez-tests.cabal
haskell-overridez-tests/fixtures/kyuubanme-no-purojekuto/: default.nix  kyuubanme-no-purojekuto.cabal
haskell-overridez-tests/fixtures/nanabanme-no-purojekuto/: default.nix
haskell-overridez-tests/fixtures/template/: default.nix  project.cabal  project.nix
haskell-overridez-tests/src/Test/: Derivation.hs  MkProjectDir.hs
haskell-overridez-tests/test/: Spec.hs
nix/: 17_09.nix  18.09.nix  18_03.nix  18_09.nix  fetchNixPkgs.nix  fetchPkgsMake.nix
nix/nix-expr/: Cabal.nix  base-orphans.nix  foldl.nix  generic-deriving.nix  haskell-overridez.nix  text.nix  turtle.nix
nix/wrapper/: default.nix
