cabal-version: 2.0
name:          haskell-overridez
synopsis:      Manage nix overrides for haskell packages
version:       0.10.1.1
license:       BSD3
license-file:  LICENSE
build-type:    Simple
author:        Tim Emiola
maintainer:    tim.emiola@gmail.com
description:   A tool to simplify the use of nix overrides during haskell development
category:      Distribution,nix

extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/adetokunbo/haskell-overridez.git

executable haskell-overridez
  main-is:          Main.hs
  hs-source-dirs:   exe
  default-language: Haskell2010
  autogen-modules:  Paths_haskell_overridez
  other-modules:    Paths_haskell_overridez
  build-depends:    base                 >= 4.2 && < 5
                  , aeson                == 1.2.4.0
                  , aeson-casing         >= 0.1 && < 0.3
                  , attoparsec           >= 0.13.2 && < 0.15
                  , bytestring           >= 0.10.8 && < 0.13
                  , exceptions           >= 0.8.3 && < 0.10
                  , foldl                >= 1.3.7 && < 1.5
                  , managed              >= 1.0.6 && < 1.2
                  , neat-interpolation   >= 0.3.2 && < 0.5
                  , network-uri          >= 2.6.1.0 && < 2.8
                  , optparse-applicative >= 0.14.2 && < 0.16
                  , system-filepath      == 0.4.14
                  , system-fileio        == 0.3.16.3
                  , text                 >= 1.2.3 && < 1.3
                  , turtle               >= 1.5.7 && < 1.5.8
                  , Cabal                >= 2.2.0.1
