name:               haskell-overridez
version:            0.10.3.0
synopsis:           Manage nix overrides for haskell packages
description:        A tool to simplify the use of nix overrides during haskell development
license:            BSD3
license-file:       LICENSE
author:             Tim Emiola
maintainer:         tim.emiola@gmail.com
category:           Distribution,nix
homepage:           https://github.com/adetokunbo/haskell-overridez
bug-reports:        https://github.com/adetokunbo/haskell-overridez/issues
build-type:         Simple
extra-source-files: README.md
cabal-version:      2.0

source-repository head
  type:     git
  location: https://github.com/adetokunbo/haskell-overridez.git

executable haskell-overridez
  main-is:          Main.hs
  other-modules:    Paths_haskell_overridez
  autogen-modules:  Paths_haskell_overridez
  hs-source-dirs:   exe
  build-depends:    base                 >= 4.2 && < 5
                  , Cabal                >= 2.2.0.1
                  , aeson                >= 1.2.4.0
                  , aeson-casing         >= 0.1 && < 0.3
                  , attoparsec           >= 0.13.2 && < 0.15
                  , bytestring           >= 0.10.8 && < 0.13
                  , exceptions           >= 0.8.3
                  , foldl                >= 1.4 && < 1.5
                  , managed              >= 1.0.6 && < 1.2
                  , neat-interpolation   >= 0.3.2 && < 0.5
                  , network-uri          >= 2.6.1.0 && < 2.8
                  , optparse-applicative >= 0.14.2 && < 0.16
                  , system-fileio        == 0.3.16.3
                  , system-filepath      == 0.4.14
                  , text                 >= 1.2.3 && < 1.3
                  , turtle               >= 1.5.7 && < 1.6
  default-language: Haskell2010
