name:               haskell-overridez-tests
version:            0.10.3.1
synopsis:           Tests haskell-overridez
description:        A separate package for testing the haskell-overridez executable
license:            BSD3
license-file:       LICENSE
author:             Tim Emiola
maintainer:         tim.emiola@gmail.com
category:           Distribution,nix
homepage:           https://github.com/adetokunbo/haskell-overridez
bug-reports:        https://github.com/adetokunbo/haskell-overridez/issues
build-type:         Simple
data-files:         fixtures/template/*.hs
                    fixtures/template/LICENSE
                    fixtures/template/*.nix
                    fixtures/template/*.cabal
                    fixtures/template/nix/*.nix
                    lib.nix
extra-source-files: README.md
                    ChangeLog.md
cabal-version:      2.0

library
  hs-source-dirs:     src
  build-tool-depends: haskell-overridez:haskell-overridez
  exposed-modules:    Test.Derivation
                      Test.MkProjectDir
  other-modules:      Paths_haskell_overridez_tests
  build-depends:      base               >= 4.2 && < 5
                    , attoparsec
                    , containers
                    , foldl
                    , hspec
                    , managed
                    , nix-derivation
                    , nix-paths
                    , system-filepath
                    , text
                    , turtle
  default-language:   Haskell2010
  ghc-options:        -Wall -fwarn-tabs


test-suite integration-tests
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  other-modules:      Paths_haskell_overridez_tests
  build-depends:      base               >= 4.2 && < 5
                    , foldl
                    , nix-paths
                    , hspec
                    , haskell-overridez-tests
                    , text
                    , turtle
  default-language:   Haskell2010
  ghc-options:        -Wall -fwarn-tabs
